manifests/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: aidevsecops-tutorial
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    service: aidevsecops-tutorial
